--- a/Server/templates/index.ejs
+++ b/Server/templates/index.ejs
@@ -19,7 +19,10 @@
 	<div class="content">
 		<% for(var i=0;i < videos.length;i++){%>
 			<div class="module">
-				<video src="/video/<%=videos[i].name%>" heignt="200px;" width="275px;" controls>
+				<video src="/video/<%=videos[i].name%>"controls></video>
+				<div class="videoDetails">
+					<%=videos[i].name %>	
+				</div>
 			</div>
 		<% } %>
 	</div>
