--- a/Server/static/main.css
+++ b/Server/static/main.css
@@ -64,30 +64,36 @@ h3{
 	}
 }
 div.content{
-	padding: 20px;
-	position: absolute;
+	position: relative;
 	left:50%;
 	background: white;
-	width: 70%;
+	padding: 20px;
 	transform: translateX(-50%);
+	display: flex;
 }
 video{
-	height:200px;
-	width:275px;
+	height:175px;
+	width:200px;
 	margin-right:10px;
+}
+video:hover div.videoDetails{
+	display: block;
+
 }
 div.module{
 	margin-bottom:20px;
 	position: relative;
-	display: flex;
 	padding:10px;
 }
 div.videoDetails{
+	display: none;
+	overflow: scroll;
 	padding:10px;
 	color:white;
 	position: relative;
-	height:190px;
-	width:265px;
 	background:#3489DB;
 	border-radius: 5px;
+}
+div.hidden{
+	visibility: none;
 }
