--- a/Server/templates/index.ejs
+++ b/Server/templates/index.ejs
@@ -3,20 +3,21 @@
 <head>
 	<title>| share ! server|</title>
 	<link rel="stylesheet" type="text/css" href="static/main.css">
+	<script type="text/javascript" src='static/vue.js'></script>
 </head>
 <body>
-	<div class="topBarner">
+	<div id="topBarner" class="topBarner">
 		<p class="outcast">S</p>hare
 		<div class="items">
 			<ul class="horizontalList">
-				<li class="active" onclick="hideContent('documents','pictures','video')">Videos</li>
-				<li onclick="hideContent('video','pictures','documents')" >Documents</li>
-				<li onclick="hideContent('documents','video','pictures')">Pictures</li>
+				<li v-bind:class='{active:videos}' v-on:click="videos =! videos">Videos</li>
+				<li v-bind:class='{active:documents}' v-on:click="documents =! documents">Documents</li>
+				<li v-bind:class='{active:image}' v-on:click="image =! image">Pictures</li>
 			</ul>
 		</div>
 	</div>
 	<div style="height:150px;"></div>
-	<div class="content" id="video">
+	<div v-show="video()" class="content" id="video">
 		<% for(var i=0;i < videos.length;i++){%>
 			<div class="module">
 				<video src="/video/<%=videos[i].name%>"controls></video>
@@ -26,7 +27,7 @@
 			</div>
 		<% } %>
 	</div>
-	<div class="content hidden" id="documents">
+	<div v-show="documents()" class="content" id="documents">
 		<% for(var i=0;i < documents.length;i++){%>
 			<div class="module">
 				<div class="videoDetails">
@@ -35,7 +36,7 @@
 			</div>
 		<% } %>
 	</div>
-	<div class="content hidden" id="pictures" onclick="hideContent('videos','documents')">
+	<div v-show="image()" class="content" id="pictures">
 		<% for(var i=0;i < pictures.length;i++){%>
 			<div class="module">
 				<img src="/pictures/<%=pictures[i].name%>"/>
@@ -47,4 +48,5 @@
 	</div>
 	<script src='static/dynamic.js'></script>
 </body>
+<script type="text/javascript" src="static/myvue.js"></script>
 </html>
