documents and pictures hide works finegit add --all

--- a/Server/templates/index.ejs
+++ b/Server/templates/index.ejs
@@ -27,7 +27,7 @@
 			</div>
 		<% } %>
 	</div>
-	<div v-show="documents()" class="content" id="documents">
+	<div v-show="false" class="content" id="documents">
 		<% for(var i=0;i < documents.length;i++){%>
 			<div class="module">
 				<div class="videoDetails">
