--- a/Server/templates/index.ejs
+++ b/Server/templates/index.ejs
@@ -10,9 +10,9 @@
 		<p class="outcast">S</p>hare
 		<div class="items">
 			<ul class="horizontalList">
-				<li v-bind:class='{active:videos}' v-on:click="videos =! videos">Videos</li>
-				<li v-bind:class='{active:documents}' v-on:click="documents =! documents">Documents</li>
-				<li v-bind:class='{active:image}' v-on:click="image =! image">Pictures</li>
+				<li v-bind:class='{active:videos}' v-on:click="videos = true; documents = false; image = false">Videos</li>
+				<li v-bind:class='{active:documents}' v-on:click="videos = false; documents = true; image = false">Documents</li>
+				<li v-bind:class='{active:image}' v-on:click="videos = false; documents = false; image = true">Pictures</li>
 			</ul>
 		</div>
 	</div>
