--- a/Controler/Server/templates/index.ejs
+++ b/Controler/Server/templates/index.ejs
@@ -10,9 +10,10 @@
 		<p class="outcast">S</p>hare
 		<div class="items">
 			<ul class="horizontalList">
-				<li v-bind:class='{active:videos}' v-on:click="videos = true; documents = false; image = false">Videos</li>
-				<li v-bind:class='{active:documents}' v-on:click="videos = false; documents = true; image = false">Documents</li>
-				<li v-bind:class='{active:image}' v-on:click="videos = false; documents = false; image = true">Pictures</li>
+				<li v-bind:class='{active:videos}' v-on:click="videos = true; documents = false; image = false ;others=false">Videos</li>
+				<li v-bind:class='{active:documents}' v-on:click="videos = false; documents = true; image = false; others=false">Documents</li>
+				<li v-bind:class='{active:image}' v-on:click="videos = false; documents = false; image = true; others=false">Pictures</li>
+				<li v-bind:class='{active:others}' v-on:click="videos = false; documents = false; image = false; others=true">Others</li>
 			</ul>
 		</div>
 	</div>
@@ -38,6 +39,13 @@
 				</a>
 				<%=documents[i].name %>
 				<embed src="documents/view/<%=documents[i].name%>" height="100%" width="50%"/>
+			</div>
+		<% } %>
+	</div>
+	<div v-show="others()" id="others">
+		<% for(var i=0; i< others.length ; i++){ %>
+			<div class="module">
+				<%=others[i].name%>
 			</div>
 		<% } %>
 	</div>
