--- a/Controler/Server/static/main.css
+++ b/Controler/Server/static/main.css
@@ -20,7 +20,7 @@ ul.horizontalList{
 ul.horizontalList li{
 	display: inline-block;
 	padding:10px;
-	margin-left: 30px;
+	margin-left: 20px;
 	border-radius: 5px;
 	border:1px solid white;
 	cursor: pointer;
@@ -69,7 +69,6 @@ div.content{
 	background: white;
 	padding: 20px;
 	transform: translateX(-50%);
-	display: flex;
 }
 video{
 	height:175px;
@@ -87,22 +86,83 @@ video:hover div.videoDetails{
 .center{
 	text-align: center;
 }
+div.Videocontent{
+	position: relative;
+	left:50%;
+	min-height:300px;
+	background: white;
+	padding: 20px;
+	transform: translateX(-50%);
+	display:inline-flex;
+}
+div.videoModule{
+	margin:30px 30px;
+	position: relative;
+	padding:10px;
+	color:black;
+	min-height:250px;
+	width:250px;
+	background:rgb(100,100,255);
+}
 div.module{
 	margin-bottom:20px;
 	position: relative;
 	padding:10px;
 	color:black;
-	border:1px solid gray;
 }
 div.videoDetails{
-	display: none;
-	overflow: scroll;
+	overflow-x:hidden;
 	padding:10px;
-	color:black;
+	color:white;
 	position: relative;
 	background:#3489DB;
-	border-radius: 5px;
+	border-radius: 15px;
+	font-size: 12;
+}
+div.videoDetails:hover{
+	overflow: visible;
 }
 div.hidden{
 	visibility: none;
+}
+div.iconMenu{
+	width:50px;
+	height:50px;
+	padding:0px;
+	position: relative;
+	left:40px;
+	display: none;
+}
+div.line{
+	position: relative;
+	width: 100%;
+	height:10px;
+	background: white;
+	margin:0px 10px;
+}
+@media only screen and (max-width:700px){
+	div.Videocontent{
+		display:block;
+		justify-content: center;
+		text-align: center;
+		align-items: center;
+	}
+	div.videoModule{
+		margin:30px 0px;
+		width:90%;
+	}
+	ul.horizontalList{
+		position:fixed;
+		bottom:0px;
+		width:100%;
+		left:0px;
+	}
+	ul.horizontalList li{
+		display: inline;
+		background:#3489DB;
+		margin:0px;
+	}
+	div.iconMenu{
+		display: block;
+	}
 }
