--- a/Controler/Server/templates/index.ejs
+++ b/Controler/Server/templates/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>| share ! server|</title>
 	<link rel="stylesheet" type="text/css" href="static/main.css">
 	<script type="text/javascript" src='static/vue.js'></script>
@@ -8,19 +9,18 @@
 <body>
 	<div id="topBarner" class="topBarner">
 		<p class="outcast">S</p>hare
-		<div class="items">
 			<ul class="horizontalList">
 				<li v-bind:class='{active:videos}' v-on:click="videos = true; documents = false; image = false ;others=false">Videos</li>
 				<li v-bind:class='{active:documents}' v-on:click="videos = false; documents = true; image = false; others=false">Documents</li>
 				<li v-bind:class='{active:image}' v-on:click="videos = false; documents = false; image = true; others=false">Pictures</li>
 				<li v-bind:class='{active:others}' v-on:click="videos = false; documents = false; image = false; others=true">Others</li>
 			</ul>
-		</div>
 	</div>
 	<div style="height:150px;"></div>
-	<div v-show="video()" class="content" id="video">
+
+	<div v-show="video()" class="Videocontent" id="video">
 		<% for(var i=0;i < videos.length;i++){%>
-			<div class="module">
+			<div class="videoModule">
 				<video src="/video/<%=videos[i].name%>"controls></video>
 				<div class="videoDetails">
 					<%=videos[i].name %>	
@@ -31,17 +31,19 @@
 			</div>
 		<% } %>
 	</div>
+
 	<div v-show="documents()" id="documents">
 		<% for(var i=0;i < documents.length;i++){%>
 			<div class="module center">
-				<a href="/documents/view/<%=documents[i].name%>">
-					<button>View</button>
+				<a href="/documents/<%=documents[i].name%>" download>
+					<button>Download</button>
 				</a>
 				<%=documents[i].name %>
 				<embed src="documents/view/<%=documents[i].name%>" height="100%" width="50%"/>
 			</div>
 		<% } %>
 	</div>
+
 	<div v-show="others()" id="others">
 		<% for(var i=0; i< others.length ; i++){ %>
 			<div class="module">
@@ -49,6 +51,7 @@
 			</div>
 		<% } %>
 	</div>
+
 	<div v-show="image()" class="content" id="pictures">
 		<% for(var i=0;i < pictures.length;i++){%>
 			<div class="module">
@@ -57,6 +60,7 @@
 			</div>
 		<% } %>
 	</div>
+
 	<script src='static/dynamic.js'></script>
 </body>
 <script type="text/javascript" src="static/myvue.js" height="200px;" width="200px;"></script>
