server migrated to sqlite3 db

--- a/Controler/Server/templates/index.ejs
+++ b/Controler/Server/templates/index.ejs
@@ -15,6 +15,11 @@
 				<li v-bind:class='{active:image}' v-on:click="videos = false; documents = false; image = true; others=false">Pictures</li>
 				<li v-bind:class='{active:others}' v-on:click="videos = false; documents = false; image = false; others=true">Others</li>
 			</ul>
+			<div class="iconMenu">
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+			</div>
 	</div>
 	<div style="height:150px;"></div>
 
