--- a/Controler/Server/templates/db.ejs
+++ b/Controler/Server/templates/db.ejs
@@ -1,17 +1,43 @@
 <html>
     <head>
-        <title> Connect to DB</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>Flash</title>
+        <link rel="stylesheet" type="text/css" href="static/containers.css">
     </head>
     <body>
-        <div>
-        <video src="/db/<%=paths[1].path%>" height="100px" controls/>
+        <div class="navbar">
+            <div class="logo"></div>
+            <ul class="navbar">
+                <li onclick="show('videos','documents','pictures')">Videos</li>
+                <li onclick="show('pictures','videos','documents')">Pictures</li>
+                <li onclick="show('documents','videos','pictures')">Documets</li>
+            </ul>
         </div>
-        <video src="/db/<%=paths[2].path%>" height="100px" controls/>
-        <% for(var i=0;i < paths.length;i++){%>
-            <div>
-            <h1><%=paths[i].path %></h1>
-            <h2>Hello World</h2>
-            </div>
-        <% } %>
+        <div class="container" id="videos">
+            <% for(var i=0;i < videos.length;i++){%>
+                <div class="item">
+                    <div><video src="/db/<%=videos[i].path%>" controls/></div>
+                    <div class="itemname"><h5><%=videos[i].filename%></h5></div>
+                </div>
+            <% } %>
+        </div>
+
+        <div class="pictures container" id="pictures">
+            <% for(var i=0; i < pictures.length;i++){%>
+                <div class="item">
+                    <img src="/db/<%=pictures[i].path%>" height="200px">
+                </div>
+            <% } %>
+        </div>
+
+        <div class="documents container" id="documents">
+            <% for(var i=0;i < documents.length;i++){%>
+                <div class="item">
+                    <h5><%=documents[i].filename%></h5>
+                </div>
+            <% } %>
+        </div>
+
+        <script src="static/containers.js"></script>
     </body>
 </html>
