--- a/Controler/Server/templates/db.ejs
+++ b/Controler/Server/templates/db.ejs
@@ -25,7 +25,7 @@
         <div class="pictures container" id="pictures">
             <% for(var i=0; i < pictures.length;i++){%>
                 <div class="item">
-                    <img src="/db/<%=pictures[i].path%>" height="200px">
+                    <img src="db/<%=pictures[i].path%>" height="200px">
                 </div>
             <% } %>
         </div>
@@ -33,7 +33,11 @@
         <div class="documents container" id="documents">
             <% for(var i=0;i < documents.length;i++){%>
                 <div class="item">
-                    <h5><%=documents[i].filename%></h5>
+                    <img class="fileIcon" src="static/Images/file.jpg"/>
+                    <div class="fileDetails">
+                        <h3><%=documents[i].filename%></h3>
+                        <a href="db/<%=documents[i].path%>" download><button>Download</button></a>
+                    </div>
                 </div>
             <% } %>
         </div>
