--- a/Final/Server/static/CSS/index.scss
+++ b/Final/Server/static/CSS/index.scss
@@ -1,6 +1,16 @@
+$pDark:#2F3542;
+$pColor:#0984e3;
+$fontLight:white;
+$fontDark:#1e90ff;
 *{
     padding:0px;
     margin:0px;
+}
+body{
+    background-image: url('/static/BG/bg.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 div.topbarner{
     position:fixed;
@@ -9,6 +19,13 @@ div.topbarner{
     max-height: 100px;
     padding:10px;
     text-align: center;
+    background: $pColor;
+    color:$fontLight;
+    box-shadow: 5px 5px 5px 10px $pDark;
+    z-index:10;
+}
+a{
+    text-decoration: none;
 }
 ul.nav{
     list-style: none;
@@ -16,7 +33,81 @@ ul.nav{
 ul.nav li{
     display: inline;
     font-family: cursive;
-    padding:5px;
+    padding:5px 15px;
     margin:0px 5px;
     border:1px solid transparent;
+    font-weight: bolder;
+    transition: 1s;
+}
+ul.nav li:hover{
+    background:$fontLight;
+    color:$fontDark;
+    border:1px solid $pDark;
+    border-radius: 5px;
+}
+div.contacts{
+    position: relative;
+    width:100vw;
+    background: $pDark;
+    color:$fontLight;
+    font-family: cursive;
+}
+div.maincontent{
+    z-index: 8;
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    max-width: 900px;
+    position: relative;
+    left:50%;
+    transform: translateX(-50%);
+}
+div.module{
+    position: relative;
+    left:50%;
+    transform: translateX(-50%);
+    padding:0px;
+    background: whitesmoke;
+    color:$pDark;
+    border-radius: 10px;
+    max-width:400px;
+    min-height: 150px;
+    margin:20px 10px;
+    overflow: hidden;
+    transition: 0.7s;
+}
+div.module h3{
+    font-family: cursive;
+    font-size: 30px;
+    position: relative;
+    vertical-align: middle;
+    text-align: center;
+}
+div.module:hover{
+    background: none;
+    color:white;
+}
+img.icon{
+    height:40px;
+    width:40px;
+}
+div.bottom{
+    position: relative;
+    top:50px;
+    width:100%;
+    height: 120px;
+    background-position: center;
+    background-size: cover;
+}
+@media only screen and (max-width:600px){
+    div.maincontent{
+        display:block;
+    }
+    div.module{
+        width:90%;
+        margin-right:0px;
+        position: relative;
+        left:50%;
+        transform: translateX(-50%);
+    }
 }
