--- a/Final/Server/views/index.ejs
+++ b/Final/Server/views/index.ejs
@@ -29,7 +29,7 @@
         <a href="/videos">
             <div class="module" >
                 <img class="icon" src="/static/Icons/video.png"/>
-                <h3>Music</h3>
+                <h3>Videos</h3>
                 <div class="bottom" style="background-image: url('/static/BG/video.png')"></div>
             </div>
         </a>
