--- a/Final/Server/views/text.ejs
+++ b/Final/Server/views/text.ejs
@@ -3,20 +3,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    
+    <title>Text|Code</title>
+    <link rel="stylesheet" href="/static/CSS/index.css"/>
+    <link rel="stylesheet" href="/static/CSS/actions.css"/>
+    <link rel="stylesheet" href="/static/CSS/media.css"/>
 </head>
 <body>
     <div class="sidebarner"></div>
     <div class="topbarner">
-        <ul class="nav">
-            <a href="/videos"><li>Videos</li></a>
-            <a href="/audio"><li>Audio</li></a>
-            <a href="/documents"><li>Documents</li></a>
-            <a href="/text"><li>Text</li></a>
-            <a href="/compressed"><li>Compressed</li></a>
+        <ul class="topnav">
+            <a href="/videos"><li><img class="small" src="/static/Icons/video.png"></li></a>
+            <a href="/audio"><li><img class="small" src="/static/Icons/audio.png"></li></a>
+            <a href="/documents"><li><img class="small" src="/static/Icons/documents.png"></li></a>
+            <a href="/text"><li><img class="small" src="/static/Icons/text.png"></li></a>
+            <a href="/compressed"><li><img class="small" src="/static/Icons/pen.png"></li></a>
         </ul>
     </div>
-    <div class="maincontent"></div>
+    <div class="content" style="color:white;">
+        <% for(var i=0;i < text.length;i++){%>
+            <a href="/readFile/<%= text[i].path%>">
+            <div class="container">
+                <div class="media">
+                        <center><span><%= text[i].filename %></span></center><br/>
+                        <center><a href="#"><img class="small" src="/static/Icons/download.png"></a></center>
+                </div>
+                <div class="links">
+                </div>
+            </div>
+            </a>
+        <% } %>
+    </div>
 </body>
 </html>
