--- a/Final/Server/static/CSS/index.scss
+++ b/Final/Server/static/CSS/index.scss
@@ -23,6 +23,11 @@ div.topbarner{
     color:$fontLight;
     box-shadow: 5px 5px 5px 10px $pDark;
     z-index:10;
+    font-family:cursive; 
+}
+div.topbarner i{
+    font-family:'Times New Roman', Times, serif;
+    color:$pDark;
 }
 a{
     text-decoration: none;
@@ -72,7 +77,7 @@ div.module{
     border-radius: 10px;
     max-width:400px;
     min-height: 150px;
-    margin:20px 10px;
+    margin:20px 0px;
     overflow: hidden;
     transition: 0.7s;
 }
