--- a/Final/Server/views/pictures.ejs
+++ b/Final/Server/views/pictures.ejs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Videos</title>
+    <title>Audio</title>
     <link rel="stylesheet" href="/static/CSS/index.css"/>
     <link rel="stylesheet" href="/static/CSS/actions.css"/>
     <link rel="stylesheet" href="/static/CSS/media.css"/>
@@ -20,14 +20,14 @@
         </ul>
     </div>
     <div class="content" style="color:white;">
-        <% for(var i=0;i < videos.length;i++){%>
+        <% for(var i=0;i < pictures.length;i++){%>
             <div class="container">
                 <div class="media">
-                    <video src="/media/<%=videos[i].path%>"controls/>
+                    <img class="media" src="/media/<%=pictures[i].path%>" >
                 </div>
                 <div class="links">
-                    <center><span><%= videos[i].filename %></span></center><br/>
-                    <center><a href="#"><img class="small" src="/static/Icons/download.png"></a></center>
+                    <center><span><%= pictures[i].filename %></span></center><br/>
+                    <center><a href="/media/<%=pictures[i].path %>" download><img class="small" src="/static/Icons/download.png"></a></center>
                 </div>
             </div>
         <% } %>
