--- a/Final/Server/views/index.ejs
+++ b/Final/Server/views/index.ejs
@@ -60,6 +60,12 @@
                 <div class="bottom" style="background-image: url('/static/BG/folder.png')"></div>
             </div>
         </a>
+        <a href="/pictures">
+            <div class="module">
+                <h3>Pictures</h3>
+                <div class="bottom" style="background-image: url('/static/BG/picture.jpg')"></div>
+            </div>
+        </a>
     </div>
     <div class="contacts">
         <div class="card">
