--- a/Final/Server/views/audio.ejs
+++ b/Final/Server/views/audio.ejs
@@ -10,20 +10,12 @@
 </head>
 <body>
     <div class="sidebarner"></div>
-    <div class="topbarner">
-        <ul class="topnav">
-            <a href="/videos"><li><img class="small" src="/static/Icons/video.png"></li></a>
-            <a href="/audio"><li><img class="small" src="/static/Icons/audio.png"></li></a>
-            <a href="/documents"><li><img class="small" src="/static/Icons/documents.png"></li></a>
-            <a href="/text"><li><img class="small" src="/static/Icons/text.png"></li></a>
-            <a href="/compressed"><li><img class="small" src="/static/Icons/pen.png"></li></a>
-        </ul>
-    </div>
+    <% include templates/header.ejs %>
     <div class="content" style="color:white;">
         <% for(var i=0;i < audio.length;i++){%>
             <div class="container">
                 <div class="media">
-                    <video src="/media/<%=audio[i].path%>"controls/>
+                    <audio src="/media/<%=audio[i].path%>"controls/>
                 </div>
                 <div class="links">
                     <center><span><%= audio[i].filename %></span></center><br/>
