--- a/Final/Server/views/documents.ejs
+++ b/Final/Server/views/documents.ejs
@@ -10,24 +10,20 @@
 </head>
 <body>
     <div class="sidebarner"></div>
-    <div class="topbarner">
-        <ul class="topnav">
-            <a href="/videos"><li><img class="small" src="/static/Icons/video.png"></li></a>
-            <a href="/audio"><li><img class="small" src="/static/Icons/audio.png"></li></a>
-            <a href="/documents"><li><img class="small" src="/static/Icons/documents.png"></li></a>
-            <a href="/text"><li><img class="small" src="/static/Icons/text.png"></li></a>
-            <a href="/compressed"><li><img class="small" src="/static/Icons/pen.png"></li></a>
-        </ul>
-    </div>
+    <% include templates/header.ejs %>
     <div class="content" style="color:white;">
         <% for(var i=0;i < documents.length;i++){%>
             <div class="container">
-                <div class="media">
-                    <embed src="/media/<%=documents[i].path%>" type="application/pdf"/>
-                </div>
-                <div class="links">
-                    <center><span><%= documents[i].filename %></span></center><br/>
-                    <center><a href="#"><img class="small" src="/static/Icons/download.png"></a></center>
+                <div class="file">
+                    <center><span><h3><%= documents[i].filename %></span></h3></center><br/>
+                    <div class="fileActions">
+                        <img class="pic" src="/static/Icons/pdf.png">
+                        <form method="POST" action="readPdf">
+                            <input type="hidden" name="filepath" value="<%=documents[i].path%>"/>
+                            <center><input class="btn" type="submit" value="Read"/></center><br/>
+                            <center><a href="/media/<%=documents[i].path%>" class="btn" download><img class="small" src="/static/Icons/download.png"></a></center>
+                        </form>
+                    </div>
                 </div>
             </div>
         <% } %>
