--- a/Final/Server/views/upload.ejs
+++ b/Final/Server/views/upload.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/index.css"/>
 </head>
 <body>
+    <% include templates/header.ejs %>
     <h1>Upload</h1>
 </body>
 </html>
