--- a/Controler/Server/templates/db.ejs
+++ b/Controler/Server/templates/db.ejs
@@ -1,8 +1,16 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Flash</title>
+        <title>Browser Share</title>
         <link rel="stylesheet" type="text/css" href="static/containers.css">
+        <style>
+            body{
+                background-image:url('static/Images/bg.jpg');
+                background-attachment: fixed;
+                background-position: center;
+                background-size: cover;
+            }
+        </style>
     </head>
     <body>
         <div class="navbar">
